@@ -1,12 +1,12 @@
 # SiD_WooCommerce
-## SiD Secure EFT plugin v1.0.2 for WooCommerce v7.7.2
+## SiD Secure EFT plugin v1.0.3 for WooCommerce v7.9.0
 
 This is the SiD Secure EFT plugin for WooCommerce. Please feel free to contact the SiD Secure EFT support team at support@sidpayment.com should you require any assistance.
 
 ## Installation
 [![How To Setup SiD Secure EFT for WooCommerce](https://appinlet.com/wp-content/uploads/2021/01/How-To-Setup-SiD-Secure-EFT-for-WooCommerce.jpg)](https://www.youtube.com/watch?v=zc9vPePRrfQ "How To Setup SiD Secure EFT for WooCommerce")
 
-Please navigate to the [releases page](https://github.com/SiD-Secure-EFT/SiD_WooCommerce/releases), download the latest release (v1.0.2) and unzip. You will then be able to follow the integration guide PDF which is included in the zip.
+Please navigate to the [releases page](https://github.com/SiD-Secure-EFT/SiD_WooCommerce/releases), download the latest release (v1.0.3) and unzip. You will then be able to follow the integration guide PDF which is included in the zip.
 
 ## Collaboration
 
